--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,7 +22,7 @@ nginx_gzip_buffers: "32 8k"
 
 nginx_log_format_main: |
   '$remote_addr - $remote_user [$time_local]'
-  '"$request" $status $body_bytes_sent'
+  '"$host" "$request" $status $body_bytes_sent'
   '"$http_referer" "$http_user_agent"'
   '$request_time $upstream_connect_time $http_x_forwarded_for $upstream_cache_status';
 
