--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,9 +21,9 @@ nginx_gzip_comp_level: "6"
 nginx_gzip_buffers: "32 8k"
 
 nginx_log_format_main: |
-  '$remote_addr - $remote_user [$time_local]'
-  '"$host" "$request" $status $body_bytes_sent'
-  '"$http_referer" "$http_user_agent"'
+  '$remote_addr - $remote_user [$time_local] '
+  '$host "$request" $status $body_bytes_sent '
+  '"$http_referer" "$http_user_agent" '
   '$request_time $upstream_connect_time $http_x_forwarded_for $upstream_cache_status';
 
 nginx_access_log: "/var/log/nginx/access.log  main"
