--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -174,15 +174,22 @@ fail2ban_destemail: root@localhost
 
 fail2ban_banaction: iptables-multiport
 
+# Custom PFSense pfSSH Ban Action
+#fail2ban_banaction: pfsense
+
+# Set these variables if using pfsense Ban Action
+#fail2ban_pfsense_ip:
+#fail2ban_pfsense_user:
+#fail2ban_ssh_private_key:
 
 # Custom PFSense URLTable Ban Action
 #fail2ban_banaction: urltable
 
 # Set these variables if using URLTable Ban Action
-fail2ban_pfsense_ip:
-fail2ban_pfsense_user:
-fail2ban_urltable_file:
-fail2ban_ssh_private_key:
+#fail2ban_pfsense_ip:
+#fail2ban_pfsense_user:
+#fail2ban_ssh_private_key:
+#fail2ban_urltable_file:
 
 
 
