--- a/tasks/configure_fail2ban.yml
+++ b/tasks/configure_fail2ban.yml
@@ -5,7 +5,9 @@
     owner: root
     content: "{{ fail2ban_ssh_private_key }}"
     dest: /root/.ssh/id_rsa
-  when: fail2ban_ssh_private_key is defined and fail2ban_ssh_private_key != None
+  when:
+    - fail2ban_ssh_private_key is defined
+      fail2ban_ssh_private_key != None
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban Filters"
   copy:
@@ -24,6 +26,12 @@
   template:
     src: "fail2ban/jail.local.j2"
     dest: "/etc/fail2ban/jail.local"
+  notify: "restart_fail2ban"
+
+- name: "[FAIL2BAN] :: Copy Fail2Ban PFSense Action"
+  template:
+    src: "fail2ban/pfsense_action.j2"
+    dest: "/etc/fail2ban/action.d/pfsense.conf"
   notify: "restart_fail2ban"
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban URLTable Action"
