--- a/tasks/configure_fail2ban.yml
+++ b/tasks/configure_fail2ban.yml
@@ -7,7 +7,7 @@
     dest: /root/.ssh/id_rsa
   when:
     - fail2ban_ssh_private_key is defined
-      fail2ban_ssh_private_key != None
+    - fail2ban_ssh_private_key != None
 
 - name: "[FAIL2BAN] :: Copy Fail2Ban Filters"
   copy:
