--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -107,7 +107,7 @@
 - name: Restart the nginx service if any configuration files have changed
   systemd:
     name: nginx
-    state: "{% if nginx_require_restart %}started{% else %}restarted{% endif %}""
+    state: "{% if nginx_require_restart|default(False) %}restarted{% else %}started{% endif %}"
     enabled: yes
     daemon_reload: yes
   register: nginx_restarted
@@ -118,7 +118,7 @@
     host: "{{ ansible_default_ipv4.address }}"
     port: "{{ nginx_http_listen }}"
     delay: 5
-  when: nginx_restarted is changed
+    timeout: 30
   ignore_errors: yes
   register: nginx_start_attempt
 
@@ -127,7 +127,8 @@
   register: nginx_journal
   when:
     - nginx_start_attempt.failed | default(false)
-- fail:
+- debug:
     msg: "{{ nginx_journal.stdout_lines }}"
   when:
     - nginx_start_attempt.failed | default(false)
+  failed_when: nginx_start_attempt.failed
