--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 ssl_cert:
 ssl_key:
+ssl_certgen_directory:
+ssl_keygen_directory:
 
 nginx_index:
   - 'index.php'
@@ -34,7 +36,6 @@ nginx_worker_rlimit_nofile: "409600"
 nginx_server_names_hash_bucket_size: "1024"
 
 nginx_extra_parameters:
-
 nginx_proxy_temp_path: "/tmp/nginx-proxy-temp"
 nginx_proxy_buffering: "on"
 nginx_proxy_connect_timeout: "180s"
