add set_fact for encoded ssl cert and key, set_fact for decoded cert and key, update debug message to print both

--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -35,7 +35,16 @@
       delegate_to: "{{ ssl_slurp_remote_host }}"
       delegate_facts: true
 
-    - name: print ssl cert contents
+    - name: set encoded ssl cert contents as fact for later processing
+      set_fact:
+        encoded_ssl_cert: "{{ ssl_cert_contents['content'] }}"
+
+    - name: set decoded ssl key and cert chain as fact for future tasks
+      set_fact:
+        ssl_privkey: "{{ encoded_ssl_key | b64decode }}"
+        ssl_certchain: "{{ encoded_ssl_cert | b64decode }}"
+
+    - name: print decoded ssl key and certificate chain for debugging
       debug:
         msg: "{{ slurp_prettybaked_wildcard_ssl_cert['content'] | b64decode }}"
         verbosity: 1
