move modules from vars to defaults because otherwise group_vars is overridden

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -88,6 +88,9 @@ nginx_keepalive: 32
 nginx_keepalive_requests: 100
 nginx_keepalive_timeout: "300s"
 
+nginx_module_pkgs: []
+
+nginx_modules_enabled: []
 
 nginx_vhosts:
   - servername: "{{ nginx_default_servername }}"
